# audioplayer

./: .gitignore  build.gradle.kts  jreleaser.yml  proguard-rules.pro
libs/: lib-decoder-ffmpeg-release.aar
src/androidTest/java/com/qytech/audioplayer/: ExampleInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt  FFAudioPlayer.cpp  FFAudioPlayer.h  QYFFprobe.h  Utils.cpp  Utils.h  android_log.h  audioplayer.cpp  fpcalc_jni.cpp  jni_audioplayer.cpp  jni_audioplayer.h  jni_audioprobe.cpp  jni_audioprobe.h  jni_dsd_resampler.cpp  jni_dsd_resampler.h  jni_ffaudioplayer.cpp  jni_ffprobe.cpp  jni_main.cpp  jni_sacd_test.cpp
src/main/cpp/ffmpeg/libavcodec/: avcodec.h  defs.h  packet.h
src/main/cpp/ffmpeg/libavfilter/: avfilter.h  buffersink.h
src/main/cpp/ffmpeg/libavformat/: avformat.h  avio.h
src/main/cpp/ffmpeg/libavutil/: aes.h  avutil.h  bswap.h  camellia.h  channel_layout.h  error.h  eval.h  executor.h  ffversion.h  frame.h  hwcontext_qsv.h  hwcontext_vulkan.h  imgutils.h  intreadwrite.h  lfg.h  log.h  opt.h  pixdesc.h  rc4.h  refstruct.h  timestamp.h  twofish.h
src/main/cpp/ffmpeg/openssl/: configuration.h
src/main/cpp/include/chromaprint/: chromaprint.h  debug.h
src/main/cpp/include/chromaprint/audio/: audio_slicer.h  ffmpeg_audio_processor.h  ffmpeg_audio_processor_swresample.h  ffmpeg_audio_reader.h
src/main/cpp/include/chromaprint/utils/: base64.h  gaussian_filter.h  gradient.h  pack_int3_array.h  pack_int5_array.h  rolling_integral_image.h  scope_exit.h  unpack_int3_array.h  unpack_int5_array.h
src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  avfft.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  d3d11va.h  defs.h  dirac.h  dv_profile.h  packet.h  qsv.h  vdpau.h  version.h  version_major.h  videotoolbox.h
src/main/cpp/include/libavdevice/: avdevice.h
src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  version.h  version_major.h
src/main/cpp/include/libavformat/: avformat.h  avio.h  version.h
src/main/cpp/include/libavutil/: aes.h  aes_ctr.h  attributes.h  audio_fifo.h  avassert.h  avstring.h  avutil.h  base64.h  bprint.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  container_fifo.h  cpu.h  crc.h  des.h  detection_bbox.h  dovi_meta.h  encryption_info.h  error.h  eval.h  executor.h  ffversion.h  film_grain_params.h  frame.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  hwcontext_d3d12va.h  hwcontext_drm.h  hwcontext_dxva2.h  hwcontext_opencl.h  hwcontext_qsv.h  hwcontext_vaapi.h  hwcontext_vdpau.h  hwcontext_vulkan.h  iamf.h  (+28 more)
src/main/cpp/include/libiconv/: iconv.h  libcharset.h  localcharset.h
src/main/cpp/include/libpostproc/: postprocess.h
src/main/cpp/include/libswresample/: swresample.h
src/main/cpp/include/libswscale/: swscale.h  version.h
src/main/cpp/include/openssl/: aes.h  asn1.h  asn1t.h  async.h  bio.h  blowfish.h  bn.h  buffer.h  byteorder.h  camellia.h  cast.h  cmac.h  cmp.h  cmp_util.h  cms.h  comp.h  conf.h  conf_api.h  configuration.h  conftypes.h  core.h  core_dispatch.h  crmf.h  crypto.h  ct.h  decoder.h  des.h  dh.h  dsa.h  dtls1.h  e_os2.h  e_ostime.h  ebcdic.h  ec.h  encoder.h  engine.h  err.h  ess.h  evp.h  hmac.h  (+47 more)
src/main/cpp/libcommon/: charset.c  fileutils.c  list.h  pb.h  utils.c  utils.h
src/main/cpp/libdstdec/: ac_data.cpp  ac_data.h  coded_table.cpp  coded_table.h  dst_ac.c  dst_consts.h  dst_decoder.c  dst_decoder.cpp  dst_decoder.h  dst_decoder_mt.cpp  dst_decoder_mt.h  dst_defs.h  frame_reader.cpp  frame_reader.h  str_data.cpp  str_data.h  yarn.c
src/main/cpp/libid3/: id3_frame.c
src/main/cpp/libsacd/: dsdiff.c  dsdiff.h  dsf.c  dst_decoder_ps3.c  iso_writer.c  sac_accessor.c  sacd_input.c  sacd_input.h  sacd_reader.c  sacd_reader.h  scarletbook.h  scarletbook_output.c  scarletbook_output.h  scarletbook_print.c  scarletbook_read.c  scarletbook_xml.c
src/main/cpp/parser/: AudioProbe.cpp  AudioProbe.h  ProbeUtils.h
src/main/cpp/player/: BasePlayer.h  FFPlayer.cpp  FFPlayer.h  FFmpegD2pDecoder.cpp  FFmpegD2pDecoder.h  PlayerDefines.h  SacdPlayer.cpp  SacdPlayer.h
src/main/cpp/utils/: CpuAffinity.h  DsdUtils.cpp  DsdUtils.h  FFmpegNetworkStream.cpp  FFmpegNetworkStream.h  Logger.h  MapUtils.h  StringUtils.h  SystemProperties.h
src/main/java/com/qytech/audioplayer/audioframe/: DSTFrameDecoder.kt  DffAudioFrame.kt  DsdResampler.kt  DsfAudioFrame.kt  SacdAudioFrame.kt
src/main/java/com/qytech/audioplayer/cue/: Cue.kt  CueModel.kt  CueParser.kt
src/main/java/com/qytech/audioplayer/decrypted/: FlacAesDataSource.kt  FlacAesDataSourceFactory.kt  SecurityKeyDecryptor.kt
src/main/java/com/qytech/audioplayer/extension/: AudioExtensions.kt  ByteBufferExtensions.kt  CollectionsExtensions.kt  String.kt
src/main/java/com/qytech/audioplayer/ffprobe/: FFMediaInfo.kt  FFprobe.kt
src/main/java/com/qytech/audioplayer/model/: AudioFileInfo.kt  AudioInfo.kt  ScarletBook.kt
src/main/java/com/qytech/audioplayer/parser/: AudioFileParserFactory.kt  AudioFileParserStrategy.kt  AudioFileReader.kt  AudioProbe.kt  CueAudioFileParser.kt  DffAudioFileParser.kt  DsfAudioFileParser.kt  LocalCoverImage.kt  NetworkAudioFileParser.kt  SacdAudioFileParser.kt  StandardAudioFileParser.kt
src/main/java/com/qytech/audioplayer/player/: AudioPlayer.kt  AudioPlayerFactory.kt  AudioPlayerManager.kt  BaseAudioPlayer.kt  BaseNativePlayer.kt  DSDMode.kt  DefaultAudioPlayer.kt  DsdAudioPlayer.kt  ExoAudioPlayer.kt  FFAudioPlayer.kt  FFPlayer.kt  FFmpegDstDecoder.kt  GlobalAudioTrackManager.kt  NativePlayerEngine.kt  QYRenderersFactory.kt  RockitPlayer.kt  SacdPlayer.kt  StreamPlayer.kt  TidalPlayer.kt
src/main/java/com/qytech/audioplayer/sacd/: DSTDecoder.java  SacdAlbumInfo.kt  SacdAreaToc.kt  SacdToc.kt  SacdTrackInfo.kt
src/main/java/com/qytech/audioplayer/strategy/: AudioProfile.kt  MediaSource.kt  MediaSourceStrategy.kt  ScanProfile.kt  WebDavUtils.kt
src/main/java/com/qytech/audioplayer/stream/: LocalSeekableInputStream.kt  NetworkSeekableInputStream.kt  SeekableInputStream.kt  SeekableInputStreamFactory.kt
src/test/java/com/qytech/audioplayer/: ExampleUnitTest.kt
(+15 files in other folders)
